Add contact page

--- a/app/assets/stylesheets/_colors.styl
+++ b/app/assets/stylesheets/_colors.styl
@@ -18,3 +18,16 @@ bg-2 = #ffffff // Panel 1
 bg-3 = #e5e5e5 // Panel 2
 bg-4 = #33363a // Super Dark
 bg-5 = #424242 // Super Dark Alt
+
+
+red     = #F44336
+green   = #4CAF50
+blue    = #2196F3
+orange  = #FF9800
+
+
+twitter   = #55acee
+facebook  = #3b5998
+linkedin  = #0077b5
+youtube   = #cd201f
+instagram = #3f729b
