--- a/app/assets/stylesheets/landing.styl
+++ b/app/assets/stylesheets/landing.styl
@@ -14,7 +14,7 @@
   @media (max-width: 500px)
     flex-direction: column
 
-  &>div
+  &>div, form
     flex: 1 1 0
     padding: 20px
     text-align: center
