--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -1,11 +1,9 @@
-<!-- Main Ad -->
 <section class='feature'>
   <h1>Cables Are Here</h1>
   <p>Your tone should come from you, not your cables.</p>
   <a href>Learn More</a>
 </section>
 
-<!-- Group of 2-3 subads -->
 <section class='accents'>
   <div class='bg-2'>
     <h2>Latest Work</h2>
@@ -16,9 +14,15 @@
     <p>Come get some</p>
     <a href>Learn More</a>
   </div>
-  <div class='bg-2'>
-    <h2>Newsletter</h2>
-    <input text='text' placeholder='email address'>
-    <button type='submit'>Submit</button>
-  </div>
+  <form action="//swanaudio.us12.list-manage.com/subscribe/post?u=e6eec5c6d112a4dcb91bcebf2&amp;id=db8e20cbc1" method="post" target="_blank" novalidate class='bg-2' ngNoForm>
+    <h2>Mailing List</h2>
+    <label>
+      <span>Email Address</span>
+      <input type="email" value="" name="EMAIL" id="mce-EMAIL" required placeholder='email address'>
+    </label>
+    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+      <input type="text" name="b_e6eec5c6d112a4dcb91bcebf2_db8e20cbc1" tabindex="-1" value="">
+    </div>
+    <button type="submit">Go</button>
+  </form>
 </section>
