--- a/app/assets/templates/products.html
+++ b/app/assets/templates/products.html
@@ -20,7 +20,7 @@
   <p>Witty Quote Man</p>
 
   <aside>
-    <section class='bg-2'>
+    <section class='panel-1'>
       <h3>Specifications</h3>
       <dl>
         <dt><span>Spec 1</span></dt>
@@ -32,14 +32,14 @@
       </dl>
     </section>
 
-    <section class='bg-2'>
+    <section class='panel-1'>
       <!-- Product Freq Graph -->
       <!-- use data instead of image ? -->
       <img src="" alt="" width='100%' height='75px'>
     </section>
   </aside>
 
-  <section class='bg-2'>
+  <section class='panel-1'>
     <!-- Product Image -->
 
     <!-- product description -->
