--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -1,18 +1,18 @@
 <header>
-  <a routerLink="/">
+  <a routerLink='/'>
     <img src='assets/swan-audio-logo-final.svg' alt='Swan Audio'>
   </a>
   <nav>
-    <a routerLink="/services" routerLinkActive="active">Services</a>
-    <a routerLink="/products" routerLinkActive="active">Products</a>
-    <a routerLink="/heroes" routerLinkActive="active">Contact</a>
+    <a routerLink='/services' routerLinkActive='active'>Services</a>
+    <a routerLink='/products' routerLinkActive='active'>Products</a>
+    <a routerLink='/contact' routerLinkActive='active'>Contact</a>
   </nav>
   <span class='flex'></span>
   <aside>
-    <a target='_blank' href="https://twitter.com/swanaudio"><i class='fa fa-twitter'></i></a>
-    <a target='_blank' href="https://www.facebook.com/swanaudioca"><i class='fa fa-facebook'></i></a>
-    <a target='_blank' href="https://www.youtube.com/channel/UCzVBh8sJ172X9HjcWMDyvBQ"><i class='fa fa-youtube'></i></a>
-    <a target='_blank' href="https://www.instagram.com/swan.audio"><i class='fa fa-instagram'></i></a>
+    <a target='_blank' href='https://twitter.com/swanaudio'><i class='fa fa-twitter'></i></a>
+    <a target='_blank' href='https://www.facebook.com/swanaudioca'><i class='fa fa-facebook'></i></a>
+    <a target='_blank' href='https://www.youtube.com/channel/UCzVBh8sJ172X9HjcWMDyvBQ'><i class='fa fa-youtube'></i></a>
+    <a target='_blank' href='https://www.instagram.com/swan.audio'><i class='fa fa-instagram'></i></a>
   </aside>
 </header>
 <main role='main'>
@@ -33,8 +33,8 @@
   <div>
     <ul class='inline-list'>
       <li><a>Blog</a></li>
-      <li><a>Terms</a></li>
-      <li><a>Privacy</a></li>
+      <li><a routerLink='/terms'>Terms</a></li>
+      <li><a routerLink='/privacy'>Privacy</a></li>
       <li><a>Contact</a></li>
     </ul>
 
