--- a/app/assets/stylesheets/main.styl
+++ b/app/assets/stylesheets/main.styl
@@ -18,7 +18,7 @@ a
     text-decoration: underline
 
 h1, h2, h3, h4, h5
-  text-transform: uppercase 
+  text-transform: uppercase
 
 a
   text-transform: uppercase
@@ -43,6 +43,12 @@ swanaudio
 .bg-3
   background: rgba(bg-3, .87)
 
+.panel-1
+  background: bg-2
+  border-bottom: 3px solid accent
+  border-radius: 3px
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12)
+
 .flex
   flex: 1 0 auto
 
@@ -53,5 +59,5 @@ ul.inline-list
   padding: 0
 
   &>li
-    flex: 1 0 auto
+    flex: 1 0 0
     padding: 0 10px
