Update style / layout

--- a/app/assets/stylesheets/_colors.styl
+++ b/app/assets/stylesheets/_colors.styl
@@ -16,8 +16,8 @@ border-light = rgba(255,255,255,.12)
 bg-1 = #f5f5f5 // Regular BG
 bg-2 = #ffffff // Panel 1
 bg-3 = #e5e5e5 // Panel 2
-bg-4 = #33363a // Super Dark
-bg-5 = #424242 // Super Dark Alt
+bg-4 = #282a2f
+bg-5 = #313131 // Super Dark Alt
 
 
 red     = #F44336
