--- a/app/assets/stylesheets/recent-tweets.styl
+++ b/app/assets/stylesheets/recent-tweets.styl
@@ -16,6 +16,7 @@ ul
   &:before
     content: "\f099"
     display: inline-block
+    color: twitter
     font-family: FontAwesome
     position: absolute
     top: 5px
