--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -1,20 +1,23 @@
 <section class='feature'>
   <h1>Cables Are Here</h1>
-  <p>Your tone should come from you, not your cables.</p>
-  <a href>Learn More</a>
+  <h2>Your tone should come from you, not your cables.</h2>
+  <a href class='btn-primary'>
+    Learn More
+    <i class='fa fa-long-arrow-right'></i>
+  </a>
 </section>
 
 <section class='accents'>
-  <div class='bg-2'>
+  <div class='panel-2'>
     <h2>Latest Work</h2>
     <p>A blog post or something</p>
   </div>
-  <div class='bg-3'>
+  <div class='panel-3'>
     <h2>Custom Modifications</h2>
     <p>Come get some</p>
     <a href>Learn More</a>
   </div>
-  <form action="//swanaudio.us12.list-manage.com/subscribe/post?u=e6eec5c6d112a4dcb91bcebf2&amp;id=db8e20cbc1" method="post" target="_blank" novalidate class='bg-2' ngNoForm>
+  <form action="//swanaudio.us12.list-manage.com/subscribe/post?u=e6eec5c6d112a4dcb91bcebf2&amp;id=db8e20cbc1" method="post" target="_blank" novalidate class='panel-4' ngNoForm>
     <h2>Mailing List</h2>
     <label>
       <span>Email Address</span>
