--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -1,6 +1,6 @@
 <header>
   <a routerLink='/'>
-    <img src='assets/swan-audio-logo-final.svg' alt='Swan Audio'>
+    <img src='assets/swan-audio-logo-final-alt.svg' alt='Swan Audio'>
   </a>
   <nav>
     <a routerLink='/services' routerLinkActive='active'>Services</a>
@@ -22,7 +22,6 @@
   <div>
     <section>
       <h5>About Us</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
     <recent-tweets></recent-tweets>
     <recent-instagram></recent-instagram>
@@ -35,13 +34,11 @@
       <li><a>Blog</a></li>
       <li><a routerLink='/terms'>Terms</a></li>
       <li><a routerLink='/privacy'>Privacy</a></li>
-      <li><a>Contact</a></li>
+      <li><a routerLink='/contact'>Contact</a></li>
     </ul>
 
     <span class='flex'></span>
 
     <span>Swan Audio Inc. &copy; 2017</span>
-    <!-- replace with just head -->
-    <img src='assets/swan-audio-logo-final.svg' alt='Swan Audio' height='50px'>
   </div>
 </footer>
