Make navigation mobile friendly

--- a/app/assets/stylesheets/recent-tweets.styl
+++ b/app/assets/stylesheets/recent-tweets.styl
@@ -12,6 +12,7 @@ ul
   color: font-light-secondary
   padding-left: 19px
   position: relative
+  text-align: left
 
   &:before
     content: "\f099"
