--- a/app/assets/stylesheets/_animations.styl
+++ b/app/assets/stylesheets/_animations.styl
@@ -10,3 +10,18 @@
   100%
     opacity: 1
     transform: translateY(0%)
+
+@keyframes slide-left
+  0%
+    opacity: 0
+  1%
+    transform: translateX(50%)
+  100%
+    opacity: 1
+    transform: translateX(0%)
+
+@keyframes fade-in
+  0%
+    opacity: 0
+  100%
+    opacity: 1
