Update landing page mobile style

--- a/app/assets/stylesheets/landing.styl
+++ b/app/assets/stylesheets/landing.styl
@@ -33,9 +33,13 @@
 
   @media (max-width: 500px)
     flex-direction: column
+    padding: 0
 
   &>div, form
     flex: 1 1 0
     margin: 1vw 2vw
     text-align: center
     padding-bottom: 20px
+
+    @media (max-width: 500px)
+      margin: 5px 0
