--- a/app/assets/stylesheets/services.styl
+++ b/app/assets/stylesheets/services.styl
@@ -4,10 +4,14 @@ article
   display: flex
   flex-direction: row
   flex-wrap: wrap
-  padding: 37px 5vw
+  padding: 37px 4vw
+
+  @media (max-width: 500px)
+    flex-direction: column
 
   &>h2
-    flex: 1 0 100%
+    flex: 1 0 auto
+    width: 100%
     margin-top: 0
 
   &>section
@@ -19,5 +23,8 @@ article
     &>p
       padding: 20px
 
-  section+section
-    margin-left: 2vw
+  section
+    margin: 0 1vw
+
+    @media (max-width: 500px)
+      margin: 10px 0
