Restyle landing newsletter signup block

--- a/app/assets/stylesheets/main.styl
+++ b/app/assets/stylesheets/main.styl
@@ -54,7 +54,7 @@ swanaudio
 .panel-2
   @extend .panel-1
 
-  &>h2
+  h2
     position: relative
     margin: 0 0 .83em
     padding: 3vh 0
@@ -67,7 +67,7 @@ swanaudio
 .panel-3
   @extend .panel-1
 
-  &>h2
+  h2
     position: relative
     margin: 0 0 .83em
     padding: 3vh 0
@@ -80,7 +80,7 @@ swanaudio
 .panel-4
   @extend .panel-1
 
-  &>h2
+  h2
     position: relative
     margin: 0 0 .83em
     padding: 3vh 0
