--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -17,15 +17,5 @@
     <p>Come get some</p>
     <a href>Learn More</a>
   </div>
-  <form action="//swanaudio.us12.list-manage.com/subscribe/post?u=e6eec5c6d112a4dcb91bcebf2&amp;id=db8e20cbc1" method="post" target="_blank" novalidate class='panel-4' ngNoForm>
-    <h2>Mailing List</h2>
-    <label>
-      <span>Email Address</span>
-      <input type="email" value="" name="EMAIL" id="mce-EMAIL" required placeholder='email address'>
-    </label>
-    <div style="position: absolute; left: -5000px;" aria-hidden="true">
-      <input type="text" name="b_e6eec5c6d112a4dcb91bcebf2_db8e20cbc1" tabindex="-1" value="">
-    </div>
-    <button type="submit">Go</button>
-  </form>
+  <newsletter-signup class='panel-4'></newsletter-signup>
 </section>
