--- a/app/assets/templates/contact.html
+++ b/app/assets/templates/contact.html
@@ -1,13 +1,16 @@
+<h1>Contact Us</h1>
+
 <section>
   <form class='panel-1'>
-    <h1>Contact</h1>
-    <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+    <ul class='inline-list'>
+      <li><h3>Sales</h3></li>
+      <li><h3>Custom Work</h3></li>
+      <li><h3>Support</h3></li>
+    </ul>
     <input type='text' name='name' placeholder='Name'>
     <input type='email' name='email' placeholder='Email address'>
-    <textarea rows='8'></textarea>
-    <button type='submit'>Submit</button>
+    <textarea rows='8' placeholder='Message'></textarea>
+    <button type='submit' class='btn-primary'>Submit</button>
   </form>
   <aside class='panel-1'>
     <img src='assets/swan-audio-logo-final.svg' alt='Swan Audio'>
