--- a/app/assets/stylesheets/contact.styl
+++ b/app/assets/stylesheets/contact.styl
@@ -1,29 +1,50 @@
 @require '_colors'
 
+p
+  color: font-secondary
+
 a
   color: font-primary
 
   &>i.fa
     font-size: 1.5em
 
+h1
+  padding: 12vh 5vw 1vh
+  background: linear-gradient(
+    rgba(primary, .25),
+    rgba(primary, .25)
+  ), url('/assets/contact-banner.jpg') no-repeat center center
+  background-size: cover
+  color: font-light
+  text-shadow: 0 1px 2px rgba(0,0,0,.6)
+  box-shadow: 0 3px 3px rgba(0,0,0,0.21)
+  margin: 0
+
+button
+  margin: 0
+
 section
   display: flex
   flex-direction: row
   flex-wrap: wrap
   align-items: flex-start
-  padding: 20px 5vw
+  padding: 20px 10vw
 
   &>form, &>aside
     display: flex
     flex-direction: column
     margin: 10px
-    padding: 2rem
+    padding: 1rem 2rem 2rem
 
   &>form
     flex: 3 0 0
 
     input, textarea
       margin-bottom: 15px
+
+    &>ul
+      text-align: center
 
   &>aside
     flex: 1 0 0
