Update footer styling

--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -23,24 +23,15 @@
 <footer role='contentinfo'>
   <div>
     <section>
-      <h5>About Us</h5>
+      <h5>Our Mission</h5>
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      <strong><a routerLink='/about'>Read More</a></strong>
+      </p>
     </section>
     <recent-tweets></recent-tweets>
     <recent-instagram></recent-instagram>
   </div>
 
-  <hr>
-
-  <div>
-    <ul class='inline-list'>
-      <li><a>Blog</a></li>
-      <li><a routerLink='/terms'>Terms</a></li>
-      <li><a routerLink='/privacy'>Privacy</a></li>
-      <li><a routerLink='/contact'>Contact</a></li>
-    </ul>
-
-    <span class='flex'></span>
-
-    <span class='copyright'>Swan Audio Inc. &copy; 2017</span>
-  </div>
+  <p>&copy; 2017 Swan Audio Inc., All Rights Reserved</p>
 </footer>
