--- a/app/assets/stylesheets/main.styl
+++ b/app/assets/stylesheets/main.styl
@@ -42,7 +42,7 @@ h5
   font-size: 1.3em
   font-weight: 700
   line-height: 1.4em
-  margin-bottom: 10px
+  margin: 1rem 0
 
 input[type='text'], input[type='email'], textarea
   padding: 5px
