--- a/app/assets/stylesheets/swanaudio.styl
+++ b/app/assets/stylesheets/swanaudio.styl
@@ -136,12 +136,13 @@ footer
   align-items: stretch
   justify-content: flex-start
 
-  hr
-    border: 0
-    border-top: 1px solid border-light
-    width: 100%
-    max-width: 1440px
-    margin: 10px auto
+  &>p
+    text-align: center
+    padding: 1rem 0
+    margin: 1rem 0 0
+    background: bg-4
+    box-shadow: inset 0 2px 2px 0 rgba(0,0,0,.14), inset 0 3px 1px -2px rgba(0,0,0,.2), inset 0 1px 5px 0 rgba(0,0,0,.12)
+    color: font-light-muted
 
   &>div
     display: flex
