Add product details, additional pages
This whole changeset was done almost a year ago ... was just never
commited. It's not a done release-able state, as many pages still have
stub/placeholder text, however it's better than nothing.

Commiting to do angular/font awesome upgrades, then we'll loop back
around to making this a lot more polished.

2020, I'm sure. We're dedicated, but not focused. :D

--- a/app/assets/stylesheets/landing.styl
+++ b/app/assets/stylesheets/landing.styl
@@ -1,5 +1,9 @@
 @require '_colors'
 
+a.email
+  color: accent
+  text-transform: none
+
 .feature
   display: flex
   flex-direction: column
@@ -8,19 +12,18 @@
   flex: 1 0 auto
   background: url('/assets/bg_tube.jpg') no-repeat center center
   background-size: cover
-  min-height: 350px
-  padding: 11vh 4vw 10vh
+  min-height: 550px
+  padding: 11vh 4vw
 
   h1
     color: font-light
     font-size: 2em
-    font-weight: 200
     margin: 0 0 10px
 
   h2
     color: font-light-secondary
     font-size: 1.5em
-    font-weight: 300
+    font-weight: 400
     margin:  0 0 10px
 
   h1, h2
@@ -40,6 +43,7 @@
     margin: 1vw 2vw
     text-align: center
     padding-bottom: 20px
+    color: font-secondary
 
     @media (max-width: 500px)
       margin: 5px 0
