--- a/app/assets/stylesheets/newsletter-signup.styl
+++ b/app/assets/stylesheets/newsletter-signup.styl
@@ -1,7 +1,6 @@
 @require '_colors'
 
 p
-  color: font-secondary
   padding: 0 .5rem
 
 form
@@ -10,3 +9,6 @@ form
 input[type='email']
   height: 1.5rem
   padding-left: .5rem
+
+button
+  padding: 0 8px
