--- a/app/assets/stylesheets/recent-tweets.styl
+++ b/app/assets/stylesheets/recent-tweets.styl
@@ -2,7 +2,7 @@
 
 ul
   list-style: none
-  padding: 0 0 0 10px
+  padding: 0
   margin: 0
 
   &>li
@@ -10,7 +10,7 @@ ul
 
 .tweet
   color: font-light-secondary
-  padding-left: 19px
+  padding-left: 1.5rem
   position: relative
   text-align: left
 
@@ -20,5 +20,5 @@ ul
     color: twitter
     font-family: FontAwesome
     position: absolute
-    top: 5px
+    top: 0
     left: 0
