--- a/app/assets/templates/landing.html
+++ b/app/assets/templates/landing.html
@@ -10,12 +10,12 @@
 <section class='accents'>
   <div class='panel-2'>
     <h2>Latest Work</h2>
-    <p>A blog post or something</p>
+    <p>We're just getting everything set up to start making some cool youtube content. Watch this space!</p>
   </div>
   <div class='panel-3'>
     <h2>Custom Modifications</h2>
-    <p>Come get some</p>
-    <a href>Learn More</a>
+    <p>Have something cool in mind? Drop us a line!</p>
+    <a class='email' href='mailto:sales@swanaudio.com'>sales@swanaudio.com</a>
   </div>
   <newsletter-signup class='panel-4'></newsletter-signup>
 </section>
