--- a/app/assets/stylesheets/swanaudio.styl
+++ b/app/assets/stylesheets/swanaudio.styl
@@ -21,12 +21,25 @@ header
     display: flex
     align-items: flex-end
     flex-direction: row
-    padding-right: 2vw
+    padding-right: 1rem
 
     &>a
       flex: 1 0 0
       display: inline-block
-      padding: 10px
+      padding: 0 1rem 10px
+      font-size: 1.25rem
+
+      i
+        transition: 200ms ease-out color
+      
+      &:hover .fa-twitter
+        color: twitter
+      &:hover .fa-youtube
+        color: youtube
+      &:hover .fa-instagram
+        color: instagram
+      &:hover .fa-facebook
+        color: facebook
 
   &>nav>a
     display: inline-block
@@ -113,6 +126,18 @@ main
     flex: 1 0 0
     flex-direction: column
 
+  & >>> >*>h1
+    padding: 7rem 5rem 1rem
+    background: linear-gradient(
+      rgba(primary, .25),
+      rgba(primary, .25)
+    ), url('/assets/contact-banner.jpg') no-repeat center center
+    background-size: cover
+    color: font-light
+    text-shadow: 0 1px 2px rgba(0,0,0,.6)
+    box-shadow: 0 3px 3px rgba(0,0,0,0.21)
+    margin: 0
+
   .hero
     padding: 100px 0
     text-align: center
@@ -156,10 +181,29 @@ footer
       flex-direction: column
       text-align: center
 
-    section, recent-tweets, recent-instagram
+    recent-tweets, recent-instagram
       display: block
+
+    section, recent-tweets, recent-instagram
       flex: 1 0 0
       padding: 0 30px
 
       p, ul
         color: font-light-secondary
+
+    section
+      display: flex
+      flex-direction: row
+      flex-wrap: wrap
+      justify-content: space-between
+      height: 100%
+
+      h5
+        width: 100%
+      a
+        width: 33%
+        line-height: 2
+        i
+          margin-right: 1rem
+          color: primary
+          width: 20px
