--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -7,7 +7,8 @@
   </a>
   <nav role='navigation'>
     <a routerLink='/products' routerLinkActive='active'>Products</a>
-    <a routerLink='/services' routerLinkActive='active'>Services</a>
+    <!--<a routerLink='/services' routerLinkActive='active'>Services</a>-->
+    <a routerLink='/about' routerLinkActive='active'>About Us</a>
     <a routerLink='/contact' routerLinkActive='active'>Contact</a>
   </nav>
   <aside>
@@ -23,11 +24,17 @@
 <footer role='contentinfo'>
   <div>
     <section>
-      <h5>Our Mission</h5>
-      <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      <strong><a routerLink='/about'>Read More</a></strong>
-      </p>
+      <h5>Site Map</h5>
+      <a routerLink='/'><i class='fa fa-home'></i>Home</a>
+      <!--<a routerLink='/services'><i class='fa fa-beer'></i>Services</a>-->
+      <a routerLink='/products'><i class='fa fa-bolt'></i>Products</a>
+
+      <a><i class='fa fa-rss'></i>Blog</a>
+      <a routerLink='/about'><i class='fa fa-heart-o'></i>About</a>
+      <a routerLink='/contact'><i class='fa fa-terminal'></i>Contact</a>
+
+      <a routerLink='/terms'><i class='fa fa-user-circle-o'></i>Terms</a>
+      <a routerLink='/privacy'><i class='fa fa-user-secret'></i>Privacy</a>
     </section>
     <recent-tweets></recent-tweets>
     <recent-instagram></recent-instagram>
