--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,9 +10,9 @@
     <title>Swan Audio</title>
 
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("swan-audio-pin-final-2000x2000-png8.png")">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/normalize.css/normalize.css")">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.min.css")">
 
     <script type='text/javascript' src='@routes.Assets.versioned("lib/systemjs/dist/system-polyfills.js")'></script>
@@ -23,6 +23,14 @@
 
 
     <script src='@routes.Assets.versioned("javascripts/system.js")'></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-92080109-1', 'auto');
+    </script>
   </head>
   <body>
     <swanaudio>Loading ...</swanaudio>
