Upgrade to angular 5, additional frontend deps
Nothing major to change, just some general house cleaning. For some
reason, sbt-tslint seemed to decide to stop working. Will investigate in
the future.

Also had to disable angulartics2, which will be re-enabled in a coming
commit.

--- a/app/assets/templates/product.html
+++ b/app/assets/templates/product.html
@@ -10,10 +10,10 @@
     <section class='panel-1'>
       <h3>Specifications</h3>
       <dl>
-        <template ngFor let-spec [ngForOf]='product.specifications'>
+        <ng-template ngFor let-spec [ngForOf]='product.specifications'>
           <dt><span>{{ spec.name }}</span></dt>
           <dd><span>{{ spec.value }}</span></dd>
-        </template>
+        </ng-template>
       </dl>
     </section>
 
