Upgrade icon library to font-awesome 5 pro
Yeah, we have a license. It's good work, and worthy of the money to
support. Give your open source communities love!

--- a/app/assets/stylesheets/recent-tweets.styl
+++ b/app/assets/stylesheets/recent-tweets.styl
@@ -6,19 +6,15 @@ ul
   margin: 0
 
   &>li
+    display: flex;
     margin-bottom: 15px
 
 .tweet
   color: font-light-secondary
-  padding-left: 1.5rem
+  padding-left: 1rem
   position: relative
   text-align: left
 
-  &:before
-    content: "\f099"
-    display: inline-block
-    color: twitter
-    font-family: FontAwesome
-    position: absolute
-    top: 0
-    left: 0
+svg
+  margin-top: 0.3rem
+  color: twitter
