--- a/app/assets/stylesheets/swanaudio.styl
+++ b/app/assets/stylesheets/swanaudio.styl
@@ -203,7 +203,8 @@ footer
       a
         width: 33%
         line-height: 2
-        i
+
+        i, svg
           margin-right: 1rem
           color: primary
           width: 20px
