--- a/app/assets/templates/about.html
+++ b/app/assets/templates/about.html
@@ -74,10 +74,10 @@
       </p>
       <ul class='inline-list'>
         <li>
-          <a href=''><i class='fa fa-facebook'></i></a>
+          <a href='https://www.facebook.com/andrew.swan.319'><i class='fab fa-facebook'></i></a>
         </li>
         <li>
-          <a href='https://www.linkedin.com/in/andrewswan1'><i class='fa fa-linkedin'></i></a>
+          <a href='https://www.linkedin.com/in/andrewswan1'><i class='fab fa-linkedin'></i></a>
         </li>
       </ul>
     </li>
@@ -90,13 +90,13 @@
       </p>
       <ul class='inline-list'>
         <li>
-          <a href='https://exitiumonline.com'><i class='fa fa-globe'></i></a>
+          <a href='https://exitiumonline.com'><i class='fal fa-globe'></i></a>
         </li>
         <li>
-          <a href='https://twitter.com/lykathia'><i class='fa fa-twitter'></i></a>
+          <a href='https://twitter.com/lykathia'><i class='fab fa-twitter'></i></a>
         </li>
         <li>
-          <a href='https://www.linkedin.com/in/lykathia'><i class='fa fa-linkedin'></i></a>
+          <a href='https://www.linkedin.com/in/lykathia'><i class='fab fa-linkedin'></i></a>
         </li>
       </ul>
     </li>
@@ -109,13 +109,13 @@
       </p>
       <ul class='inline-list'>
         <li>
-          <a href='https://www.facebook.com/Alton.Leibel'><i class='fa fa-facebook'></i></a>
+          <a href='https://www.facebook.com/Alton.Leibel'><i class='fab fa-facebook'></i></a>
         </li>
         <li>
-          <a href='https://twitter.com/that_guy_alton'><i class='fa fa-twitter'></i></a>
+          <a href='https://twitter.com/that_guy_alton'><i class='fab fa-twitter'></i></a>
         </li>
         <li>
-          <a href='https://www.linkedin.com/in/alton-leibel-bbb4b879'><i class='fa fa-linkedin'></i></a>
+          <a href='https://www.linkedin.com/in/alton-leibel-bbb4b879'><i class='fab fa-linkedin'></i></a>
         </li>
       </ul>
     </li>
