--- a/app/assets/templates/recent-tweets.html
+++ b/app/assets/templates/recent-tweets.html
@@ -1,6 +1,7 @@
 <h5>Recent Tweets</h5>
 <ul>
   <li *ngFor='let tweet of tweets'>
+    <i class='fab fa-twitter'></i>
     <div class='tweet'>
       {{ tweet.text }}
     </div>
