--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,14 +11,15 @@
 
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("swan-audio-pin-final-2000x2000-png8.png")">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/normalize.css/normalize.css")">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.min.css")">
+    <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("lib/normalize.css/normalize.css")'>
+    <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.min.css")'>
+    <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("fa-svg-with-js.css")'>
 
     <script type='text/javascript' src='@routes.Assets.versioned("lib/core-js/client/shim.min.js")'></script>
     <script type='text/javascript' src='@routes.Assets.versioned("lib/zone.js/dist/zone.js")'></script>
     <script type='text/javascript' src='@routes.Assets.versioned("lib/systemjs/dist/system.src.js")'></script>
 
+    <script defer src='@routes.Assets.versioned("fontawesome-all.min.js")'></script>
 
     <script src='@routes.Assets.versioned("javascripts/system.js")'></script>
     <script>
