--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -12,10 +12,10 @@
     <a routerLink='/contact' routerLinkActive='active'>Contact</a>
   </nav>
   <aside>
-    <a target='_blank' href='https://twitter.com/swanaudio'><i class='fa fa-twitter'></i></a>
-    <a target='_blank' href='https://www.facebook.com/swanaudioca'><i class='fa fa-facebook'></i></a>
-    <a target='_blank' href='https://www.youtube.com/channel/UCzVBh8sJ172X9HjcWMDyvBQ'><i class='fa fa-youtube'></i></a>
-    <a target='_blank' href='https://www.instagram.com/swan.audio'><i class='fa fa-instagram'></i></a>
+    <a target='_blank' href='https://twitter.com/swanaudio'><i class='fab fa-twitter'></i></a>
+    <a target='_blank' href='https://www.facebook.com/swanaudioca'><i class='fab fa-facebook'></i></a>
+    <a target='_blank' href='https://www.youtube.com/channel/UCzVBh8sJ172X9HjcWMDyvBQ'><i class='fab fa-youtube'></i></a>
+    <a target='_blank' href='https://www.instagram.com/swan.audio'><i class='fab fa-instagram'></i></a>
   </aside>
 </header>
 <main role='main'>
@@ -25,16 +25,16 @@
   <div>
     <section>
       <h5>Site Map</h5>
-      <a routerLink='/'><i class='fa fa-home'></i>Home</a>
+      <a routerLink='/'><i class='fal fa-home'></i>Home</a>
       <!--<a routerLink='/services'><i class='fa fa-beer'></i>Services</a>-->
-      <a routerLink='/products'><i class='fa fa-bolt'></i>Products</a>
+      <a routerLink='/products'><i class='fal fa-bolt'></i>Products</a>
 
-      <a><i class='fa fa-rss'></i>Blog</a>
-      <a routerLink='/about'><i class='fa fa-heart-o'></i>About</a>
-      <a routerLink='/contact'><i class='fa fa-terminal'></i>Contact</a>
+      <a><i class='fal fa-rss'></i>Blog</a>
+      <a routerLink='/about'><i class='fal fa-headphones'></i>About</a>
+      <a routerLink='/contact'><i class='fal fa-pencil-alt'></i>Contact</a>
 
-      <a routerLink='/terms'><i class='fa fa-user-circle-o'></i>Terms</a>
-      <a routerLink='/privacy'><i class='fa fa-user-secret'></i>Privacy</a>
+      <a routerLink='/terms'><i class='fal fa-file-alt'></i>Terms</a>
+      <a routerLink='/privacy'><i class='fal fa-user-secret'></i>Privacy</a>
     </section>
     <recent-tweets></recent-tweets>
     <recent-instagram></recent-instagram>
