Fix instagram API usage
They changed their previous publicly accessable endpoint, so with a bit
of reverse engineering ... we have a new one. The normal API requires a
user to authenticate, but we're trying to drive user traffic to
instagram -- not have users use instagram on our own site.

--- a/app/assets/templates/recent-instagram.html
+++ b/app/assets/templates/recent-instagram.html
@@ -1,8 +1,8 @@
 <h5>Instagram</h5>
 <ul>
   <li *ngFor='let image of images'>
-    <a href='{{ image.link }}' target='_blank'>
-      <img src='{{ image.images.low_resolution.url }}' alt='{{ image.caption.text }}'>
+    <a href='{{ "//instagram.com/p/" + image.node.shortcode }}' target='_blank'>
+      <img src='{{ image.node.thumbnail_src }}' alt='{{ image.node.edge_media_to_caption.edges[0].node.text }}'>
     </a>
   </li>
 </ul>
